[project]
name = "rogen-aging"
version = "0.1.0"
description = "Project scaffold for genomic notebooks and analysis, managed with `uv`."
authors = [
    {name = "Mitya Toren", email = "mitya@rogen.ai"},
]
dependencies = [
    "alphagenome",
    "pandas",
    "matplotlib",
    "requests",
    "polars",
    "python-dotenv>=1.2.1",
    "networkx>=3.6",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
genomics = []

[project.group.dev.dependencies]
ipykernel = "*"
jupyterlab = "*"

[tool.uv.sources]
rogen-aging = { path = "." }


